fix: quarterly -> periodically

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -19,7 +19,7 @@ platform to do just that. Donors can come to the OpenSats web platform and
 either recommend gifts to [specific projects](/projects) or contribute to our
 [general fund][gf].
 
-Grants are distributed quarterly by our board. We evaluate and assess
+Grants are distributed periodically by our board. We evaluate and assess
 applications to make sure any grants are awarded to high impact projects in the
 Bitcoin space. We distribute grants to a wide variety of contributor types
 (developers, designers, researchers, educators, reviewers, and the like), but
