--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -249,7 +249,7 @@ bitcoin and lightning. We will announce another wave of grants for these soon.
 
 To all the nostr projects that applied and didn't make the cut this time around:
 don't be discouraged. Please [apply for funding][apply] again in the future. We
-will announce new grants and funding opportunities quarterly, and there is
+will announce new grants and funding opportunities periodically, and there is
 always the possibility of being listed on the OpenSats website to receive
 pass-through donations for your project.  
 
