--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -24,7 +24,7 @@ infrastructure.
 
 ## How are funds distributed?
 
-Donations to the general fund will be distributed quarterly by our board. We
+Donations to the general fund will be distributed periodically by our board. We
 evaluate and assess applications to make sure any grants are awarded to high
 impact projects in the Bitcoin space.
 
