Update landing page (#193)
* feat(meta): update tagline

* feat(index): shorter intro

* feat(index): Donate section

* feat(index): re-order sections

* feat(index): add link to nostr

* feat(index): add "Learn More" to apply section

* feat(index): add "View All Projects" link

* feat(index): show last 2 blog posts, not 5

* feat(index): improve project card grid display

* feat(projects): better project grid display

* feat(faq): add link to board

* fix(about): grammar

* style(projects): reword headlines

* fix: quarterly -> periodically

* feat(index): improve copy

* fix(index): move ProjectList inside section div

* feat(index): improve copy

* feat(index): full-width donate buttons

* feat(index): move donation buttons up; kill donation section

* feat(index): add "Why OpenSats?" section

* feat(index): improve copy

* feat(index): add "Our Mission" link

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -24,7 +24,7 @@ infrastructure.
 
 ## How are funds distributed?
 
-Donations to the general fund will be distributed quarterly by our board. We
+Donations to the general fund will be distributed periodically by our board. We
 evaluate and assess applications to make sure any grants are awarded to high
 impact projects in the Bitcoin space.
 
@@ -123,11 +123,11 @@ passthrough.
 
 ## Tell me more about your board. How does it work?
 
-We have nine board members and we vote by majority. All standard decisions (like
-which new projects are added to the website or which projects will receive
-grants allocated from the general fund) are made by simple majority (5-4), while
-board-related changes will require 6-3 majority. New members to the board will
-be announced publicly.
+We have [nine board members](/about/#board-of-directors) and we vote by
+majority. All standard decisions (like which new projects are added to the
+website or which projects will receive grants allocated from the general fund)
+are made by simple majority (5-4), while board-related changes will require 6-3
+majority. New members to the board will be announced publicly.
 
 ## Are you really 100% passthrough?
 
