--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -19,7 +19,7 @@ platform to do just that. Donors can come to the OpenSats web platform and
 either recommend gifts to [specific projects](/projects) or contribute to our
 [general fund][gf].
 
-Grants are distributed quarterly by our board. We evaluate and assess
+Grants are distributed periodically by our board. We evaluate and assess
 applications to make sure any grants are awarded to high impact projects in the
 Bitcoin space. We distribute grants to a wide variety of contributor types
 (developers, designers, researchers, educators, reviewers, and the like), but
@@ -30,7 +30,7 @@ public access to Bitcoin infrastructure.
 
 # Board of Directors
 
-We didn't want any one person or small group to have control of the decision
+We don't want any one person or small group to have control of the decision
 making process of OpenSats, so we created a transparent, public-facing, and
 accountable nine-person board to make all organizational decisions. OpenSats'
 board members have deep-seated values and will stop at nothing to support and
