feat(transparency): add meeting minutes & financials

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -37,6 +37,16 @@ as in the internal and external processes of our organization.
 - [EEO & Non-Discrimination Policy][eeo]
 - [Whistleblower Protection Policy][wpp]
 
+## Meeting Minutes
+
+- [2023-Q2](#)
+- [2023-Q3](#)
+- 2023-Q4
+
+## Financials
+
+- TBD
+
 [coi]: /docs/conflict.pdf
 [tax]: /docs/tax.pdf
 [rrp]: /docs/rrp.pdf
