Move BitBanana down, re-word

--- a/data/blog/bitcoin-grants-december-2023.mdx
+++ b/data/blog/bitcoin-grants-december-2023.mdx
@@ -27,9 +27,9 @@ We are proud to announce 10 new grants to impactful projects in the Bitcoin spac
 - [Clams](#clams)
 - [Fully Noded](#fully-noded)
 - [Validating Lightning Signer](#validating-lightning-signer)
-- [BitBanana](#bitbanana)
 - [Fedimint Lightning Gateway](#fedimint-lightning-gateway)
 - [Pickhardt Payments plugin for Core-Lightning](#pickhardt-payments-plugin-for-core-lightning)
+- [BitBanana](#bitbanana)
 - [Crack the Orange](#crack-the-orange)
 - [Bitcoin Core App](#bitcoin-core-app)
 - [Krux](#krux)
@@ -100,15 +100,6 @@ using VLS differently, some choosing to use it to improve their security, and
 some choosing to remain with a hosted node or node on one device for
 convenience.
 
-### BitBanana
-
-BitBanana aims to provide the best User Experience for remote Lightning Node
-Management on Android. Additionally to managing the node, BitBanana allows its
-users to access the wallet functionality of their node in everyday situations.
-The focus of the app is remote management, which makes it a great open-source
-tool for node operators. The app was originally known as "Zap Android" before it
-was forked and rebranded.
-
 ### Fedimint Lightning Gateway
 
 Fedimint is an open-source framework for creating federated applications.
@@ -148,6 +139,15 @@ of improvement in the payments layer of the Lightning Network without the need
 to change the protocol's basic rules. From the users' point of view, it'll allow
 for a faster payment experience and fewer chances of payment failures.
 
+### BitBanana
+
+BitBanana aims to provide the best User Experience for remote Lightning Node
+Management on Android. Additionally to managing the node, BitBanana allows its
+users to access the wallet functionality of their node in everyday situations.
+The focus of the app is remote management, which makes it a great open-source
+tool for node operators. The app was originally known as "Zap Android" before it
+was forked and rebranded.
+
 ### Crack the Orange
 
 Crack the Orange is an educational effort that is building a cohort of Bitcoin
@@ -156,9 +156,9 @@ builders, and human rights activists per year. It is estimated that each of
 these individuals will onboard another ~10 peers in their communities with the
 knowledge acquired, spreading Bitcoin knowledge organically and peer-to-peer.
 
-Any educational material produced by the project will be made publicly available
-and published under a permissive license that is appropriate for the content,
-i.e. one of the free licenses listed at
+Any educational material produced by the project under this grant will be made
+publicly available and published under a permissive license that is appropriate
+for the content, i.e. one of the free licenses listed at
 [gnu.org/licenses/license-list.html](https://www.gnu.org/licenses/license-list.html).
 
 ### Bitcoin Core App
