feat(blog): link to /selection

--- a/data/blog/bitcoin-grants-december-2023.mdx
+++ b/data/blog/bitcoin-grants-december-2023.mdx
@@ -213,5 +213,5 @@ without your help. If you want to help us cover our operational expenses, please
 consider donating to our [operations budget][ob].
 
 [gf]: /projects/general_fund
-[gs]: https://github.com/OpenSats/website/blob/master/docs/grant-selection.md
+[gs]: /selection
 [ob]: /projects/opensats_operations_budget
