Add repository link and license

--- a/data/blog/bitcoin-grants-december-2023.mdx
+++ b/data/blog/bitcoin-grants-december-2023.mdx
@@ -67,10 +67,12 @@ dashboard.
 
 The app is a Progressive Web App (PWA) meaning it works on all devices that have
 a browser. It has a mobile experience that is similar to Zeus. The desktop
-version is more advanced, with a UX akin to Ride The Lightning.
+version is more advanced, with a UX akin to Ride The Lightning.  Clams is
+privacy-focused, does no logging, has no trackers, and all data stays on the
+user's device.
 
-Clams is privacy-focused, does no logging, has no trackers, and all data stays
-on the user's device.
+Repository: [clams-tech](https://github.com/clams-tech/)  
+License: MIT
 
 ### Fully Noded
 
@@ -83,6 +85,9 @@ managing funds with `bitcoin-cli`.
 
 The Fully Noded stack has the potential to make “one-click” self-sovereign
 Bitcoin usage a thing, as it is non-custodial and private by default.
+
+Repository: [Fonta1n3/FullyNoded](https://github.com/Fonta1n3/FullyNoded)  
+License: MIT
 
 ### Validating Lightning Signer
 
@@ -99,6 +104,9 @@ Individual users of the Bitcoin Lightning network may weigh the trade-offs of
 using VLS differently, some choosing to use it to improve their security, and
 some choosing to remain with a hosted node or node on one device for
 convenience.
+
+Repository: [lightning-signer/validating-lightning-signer](https://gitlab.com/lightning-signer/validating-lightning-signer)  
+License: Apache 2.0
 
 ### Fedimint Lightning Gateway
 
@@ -122,6 +130,9 @@ transactions can only be facilitated among clients of the federation. The
 Lightning support opens up Fedimint to the rest of the Bitcoin ecosystem. A
 client of Fedimint can pay to and receive from anything that "speaks" lightning.
 
+Repository: [fedimint/fedimint](https://github.com/fedimint/fedimint)  
+License: MIT
+
 ### Pickhardt Payments plugin for Core-Lightning
 
 Pickhardt Payments is a novel payment routing strategy for the Lightning
@@ -139,6 +150,9 @@ of improvement in the payments layer of the Lightning Network without the need
 to change the protocol's basic rules. From the users' point of view, it'll allow
 for a faster payment experience and fewer chances of payment failures.
 
+Repository: [lagrang3/lightning](https://github.com/lagrang3/lightning)  
+License: BSD-MIT
+
 ### BitBanana
 
 BitBanana aims to provide the best User Experience for remote Lightning Node
@@ -147,6 +161,9 @@ users to access the wallet functionality of their node in everyday situations.
 The focus of the app is remote management, which makes it a great open-source
 tool for node operators. The app was originally known as "Zap Android" before it
 was forked and rebranded.
+
+Repository: [michaelWuensch/BitBanana](https://github.com/michaelWuensch/BitBanana)  
+License: MIT
 
 ### Crack the Orange
 
@@ -160,6 +177,9 @@ Any educational material produced by the project under this grant will be made
 publicly available and published under a permissive license that is appropriate
 for the content, i.e. one of the free licenses listed at
 [gnu.org/licenses/license-list.html](https://www.gnu.org/licenses/license-list.html).
+
+Repository: [anitaposch/cto](https://github.com/anitaposch/cto)  
+License: MIT
 
 ### Bitcoin Core App
 
@@ -176,6 +196,9 @@ enforcement of the network rules to those with mobile devices. With Core running
 as a background process on phones and tablets, apps and services can be built to
 use the local node instead of relying on remote nodes or a centralized server.
 
+Repository: [bitcoin-core/gui-qml](https://github.com/bitcoin-core/gui-qml)  
+License: MIT
+
 ### Krux
 
 Krux is a free and open-source firmware that enables anyone to build their own
@@ -189,6 +212,9 @@ Users can choose to buy a ready-to-use device—where all they need is to flash
 the firmware—or make a DIY version themselves. Krux can also run, mainly for
 educational purposes, on PCs and Android devices.
 
+Repository: [selfcustody/krux](https://github.com/selfcustody/krux)  
+License: MIT / Apache 2.0
+
 ### Vexl
 
 Vexl is a free and open-source mobile app giving its users a simple, accessible,
@@ -198,6 +224,9 @@ platform, and doesn't store any user data.
 
 The mission of Vexl is to make peer-to-peer and non-KYC bitcoin accessible to
 anyone without the need to go through a trusted third party.
+
+Repository: [vexl-it/vexl](https://github.com/vexl-it/vexl)  
+License: GPL-3.0
 
 ---
 
