fix: constantly -> consistently

--- a/data/blog/bitcoin-grants-december-2023.mdx
+++ b/data/blog/bitcoin-grants-december-2023.mdx
@@ -15,7 +15,7 @@ on a new block. Every 10 minutes, the timechain is flourishing. It is the
 constant signal in an increasingly noisy world.
 
 While OpenSats doesn't operate in 10-minute intervals like Bitcoin does, we aim
-to filter the signal from the noise and constantly execute just the same. Our
+to filter the signal from the noise and consistently execute just the same. Our
 [mission](/mission) is to support and maintain a sustainable ecosystem of
 funding for free and open-source projects and contributors, especially
 Bitcoin-related projects and projects that help Bitcoin flourish. In other
