feat: add odell as co-author

--- a/data/blog/bitcoin-grants-december-2023.mdx
+++ b/data/blog/bitcoin-grants-december-2023.mdx
@@ -3,7 +3,7 @@ title: "Third Wave of Bitcoin Grants"
 date: '2023-12-18'
 tags: ['OpenSats', 'grants', 'bitcoin']
 draft: false
-authors: ['dergigi']
+authors: ['dergigi', 'odell']
 images: ['/static/images/blog/17-bitcoin-dec.jpg']
 summary: "OpenSats is funding 10 more open-source projects in the bitcoin space."
 ---
