fix: mempool -> mempools

--- a/data/blog/bitcoin-grants-december-2023.mdx
+++ b/data/blog/bitcoin-grants-december-2023.mdx
@@ -9,7 +9,7 @@ summary: "OpenSats is funding 10 more open-source projects in the bitcoin space.
 ---
 
 One aspect of Bitcoin that is often overlooked is that, no matter how crazy the
-news cycle (or the mempool) might be, Bitcoin marches on, unbothered. Every 10
+news cycle (or the mempools) might be, Bitcoin marches on, unbothered. Every 10
 minutes, transactions are being settled. Every 10 minutes, the network focuses
 on a new block. Every 10 minutes, the timechain is flourishing. It is the
 constant signal in an increasingly noisy world.
