--- a/data/blog/bitcoin-grants-december-2023.mdx
+++ b/data/blog/bitcoin-grants-december-2023.mdx
@@ -22,7 +22,8 @@ Bitcoin-related projects and projects that help Bitcoin flourish. In other
 words: we want Bitcoin's open-source contributors to flourish alongside Bitcoin
 and have them unbothered, moisturized, happy, and focused.
 
-We are proud to announce 10 new grants to impactful projects in the Bitcoin space. In no particular order, here they are:
+We are proud to announce 10 new grants to impactful projects in the Bitcoin
+space. In no particular order, here they are:
 
 - [Clams](#clams)
 - [Fully Noded](#fully-noded)
