feat: re-word VLS section

--- a/data/blog/bitcoin-grants-december-2023.mdx
+++ b/data/blog/bitcoin-grants-december-2023.mdx
@@ -98,13 +98,10 @@ private keys are stored on the Lightning node itself. This poses a risk: if
 someone manages to hack into a node, they could steal the user's Bitcoin. It's
 like leaving your money in a vault but hanging the key on the vault's door.
 
-VLS brings to Bitcoin Lightning what signing devices brought to Bitcoin,
-improved security via a reduced attack surface. The future support for multi-sig
-on the Lightning network that VLS will further improve security for users.
-Individual users of the Bitcoin Lightning network may weigh the trade-offs of
-using VLS differently, some choosing to use it to improve their security, and
-some choosing to remain with a hosted node or node on one device for
-convenience.
+VLS brings to Bitcoin Lightning what signing devices brought to Bitcoin:
+improved security via a reduced attack surface. In the future, VLS plans to
+implement multisig support, further improving security for Lightning Network
+users.
 
 Repository: [lightning-signer/validating-lightning-signer](https://gitlab.com/lightning-signer/validating-lightning-signer)  
 License: Apache 2.0
