feat(donate): add Wire Transfers section

--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -12,7 +12,16 @@ as well as our long-term support program are sourced from this fund.
 
 ---
 
-# Donate via Donor-Advised Fund
+# Wire Transfers
+
+As credit card processing fees can be quite high, we encourage you to make use
+of wire transfers if you are considering to make a substantial donation.
+
+Please reach out to donate@opensats.org with an inquiry for our wire information.
+
+---
+
+# Donor-Advised Funds
 
 You can donate to OpenSats via a donor-advised fund. To quote our friends from [Brink][brink]:
 
@@ -59,6 +68,8 @@ our [Operations Budget][ob] to keep OpenSats alive.
 <center>
 <DonateToOperationsButton/>
 </center>
+
+---
 
 If you would like to facilitate a substantial donation or support us on a
 recurring basis, please reach out to donate@opensats.org.
