fix: use relative links

--- a/data/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin.mdx
+++ b/data/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin.mdx
@@ -44,10 +44,9 @@ stronger, more resilient Bitcoin network by fostering long-term stability for
 open-source developers.
 
 If you’re a fellow load-bearing internet person, OpenSats invites you to explore
-the opportunities within our [long-term support
-program](https://opensats.org/tags/lts). If you would like to support Tobin’s
-and other’s work, please consider donating to the [General
-Fund](https://opensats.org/projects/general_fund).
+the opportunities within our [long-term support program](/tags/lts). If you
+would like to support Tobin’s and other’s work, please consider donating to the
+[General Fund](/projects/general_fund).
 
 <center>
     <DonateToGeneralFundButton/>
