Slight re-word of two sentences

--- a/data/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin.mdx
+++ b/data/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin.mdx
@@ -8,8 +8,8 @@ images: ['/static/images/blog/15-furszy.jpg']
 summary: "OpenSats Welcomes Furszy as an LTS Grantee."
 ---
 
-OpenSats extends a warm welcome to Tobin Harding, our newest LTS Grant recipient
-hailing from the Central Coast of New South Wales where he lives by the mantra
+OpenSats extends a warm welcome to Tobin Harding, our newest LTS grantee hailing
+from the Central Coast of New South Wales where he lives by the mantra
 *”Code, Roll, Dive, Breath - Repeat.”*
 
 In the heart of the kernel mini-conf at the Perth LCA nine years ago, Tobin felt
@@ -39,14 +39,14 @@ newcomers. Complementing this, Tobin is dedicated to delivering clear and
 accessible documentation. He’s also simultaneously working on a v2 of his
 [rust-PSBT](https://github.com/tcharding/rust-psbt) implementation.
 
-All of Tobin’s work lines up perfectly with the LTS grant's mission—building a
-stronger, more resilient Bitcoin network by fostering long-term stability for
-open-source developers.
+All of Tobin’s work lines up perfectly with the goal of the LTS program:
+building a stronger, more resilient Bitcoin network by fostering long-term
+stability for open-source developers.
 
 If you’re a fellow load-bearing internet person, OpenSats invites you to explore
 the opportunities within our [long-term support program](/tags/lts). If you
 would like to support Tobin’s and other’s work, please consider donating to the
-[General Fund](/projects/general_fund).
+[General Fund](/projects/general_fund):
 
 <center>
     <DonateToGeneralFundButton/>
