fix: name in summary

--- a/data/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin.mdx
+++ b/data/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'bitcoin', 'LTS']
 draft: false
 authors: ['cfunk']
 images: ['/static/images/blog/15-furszy.jpg']
-summary: "OpenSats Welcomes Furszy as an LTS Grantee."
+summary: "OpenSats Welcomes Tobin Harding as an LTS Grantee."
 ---
 
 OpenSats extends a warm welcome to Tobin Harding, our newest LTS grantee hailing
