--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -1,6 +1,6 @@
 ---
 title: Transparency
-summary: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+summary: "OpenSats' transparency and policy documents."
 image: /static/images/avatar.png
 layout: PageLayout
 ---
@@ -39,13 +39,8 @@ as in the internal and external processes of our organization.
 
 ## Meeting Minutes
 
-- [2023-Q2](#)
-- [2023-Q3](#)
-- 2023-Q4
-
-## Financials
-
-- TBD
+- [2023-Q2](/docs/minutes/2023-Q2.pdf)
+- [2023-Q3](/docs/minutes/2023-Q3.pdf)
 
 [coi]: /docs/conflict.pdf
 [tax]: /docs/tax.pdf
