fix(transparency): link to /selection

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -27,7 +27,7 @@ as in the internal and external processes of our organization.
 
 ## Grants & Research
 
-- [Grant Selection Process](https://github.com/OpenSats/website/blob/master/docs/grant-selection.md)
+- [Grant Selection Process](/selection)
 
 ## Ethics & Compliance
 
