Add minutes for Q2 & Q3 (#201)
* feat(transparency): add meeting minutes & financials

* fix(transparency): summary

* feat(transparency): add minutes for Q2 & Q3

* feat(footer): add /transparency

* fix(transparency): link to /selection

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -1,6 +1,6 @@
 ---
 title: Transparency
-summary: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+summary: "OpenSats' transparency and policy documents."
 image: /static/images/avatar.png
 layout: PageLayout
 ---
@@ -27,7 +27,7 @@ as in the internal and external processes of our organization.
 
 ## Grants & Research
 
-- [Grant Selection Process](https://github.com/OpenSats/website/blob/master/docs/grant-selection.md)
+- [Grant Selection Process](/selection)
 
 ## Ethics & Compliance
 
@@ -36,6 +36,11 @@ as in the internal and external processes of our organization.
 - [Record Retention Policy][rrp]
 - [EEO & Non-Discrimination Policy][eeo]
 - [Whistleblower Protection Policy][wpp]
+
+## Meeting Minutes
+
+- [2023-Q2](/docs/minutes/2023-Q2.pdf)
+- [2023-Q3](/docs/minutes/2023-Q3.pdf)
 
 [coi]: /docs/conflict.pdf
 [tax]: /docs/tax.pdf
