chore(blog): formatting

--- a/data/blog/nostr-grants-december-2023.mdx
+++ b/data/blog/nostr-grants-december-2023.mdx
@@ -35,11 +35,11 @@ giving out 7 more grants to the following nostr projects:
 
 This brings the total number of nostr grants to 39, providing support for a wide
 range of developers working on clients, relays, libraries, NIPs, cryptography,
-research, education, [design](https://nostrdesign.org/), UX, and … other stuff.
+research, education, [design](https://nostrdesign.org/), UX, and ... other stuff.
 
-Our nostr grants are sourced from [The Nostr
-Fund](https://opensats.org/projects/nostr). If you would like to help us in
-supporting the nostr ecosystem, consider making a donation to the fund:
+Our nostr grants are sourced from [The Nostr Fund](/projects/nostr). If you
+would like to help us in supporting the nostr ecosystem, consider making a
+donation to the fund:
 
 <center>
     <DonateToNostrFundButton/>
@@ -55,8 +55,7 @@ extendable and customizable, allowing users to easily install extensions and use
 various themes. Its multi-column TweetDeck-style interface is a great way to
 stay on top of multiple feeds and topics at once.
 
-[https://github.com/luminous-devs/lume](https://github.com/luminous-devs/lume)
-
+[luminous-devs/lume](https://github.com/luminous-devs/lume)  
 License: GPL-3.0
 
 ### Flockstr
@@ -69,8 +68,7 @@ so users foreign to nostr may be entirely unaware that they are using a
 decentralized ecosystem aside from when signing in or seamlessly paying for paid
 events via lightning.
 
-[https://github.com/zmeyer44/flockstr](https://github.com/zmeyer44/flockstr)
-
+[zmeyer44/flockstr](https://github.com/zmeyer44/flockstr)  
 License: MIT
 
 ### Camelus
@@ -87,8 +85,7 @@ built upon [NDK](https://github.com/nostr-dev-kit/) and the
 [NIP-65](https://github.com/nostr-protocol/nips/blob/master/65.md) gossip model,
 allowing the client to focus on higher-level functionality and features.
 
-[https://github.com/leo-lox/camelus](https://github.com/leo-lox/camelus)
-
+[leo-lox/camelus](https://github.com/leo-lox/camelus)  
 License: GPL-3.0
 
 ### noStrudel
@@ -104,8 +101,7 @@ communities with a Reddit-style interface for
 content. Alongside regular note, messaging, and profile functionality, noStrudel
 also features streams, channels, lists, badges, and more.
 
-[https://github.com/hzrd149/nostrudel](https://github.com/hzrd149/nostrudel)
-
+[hzrd149/nostrudel](https://github.com/hzrd149/nostrudel)  
 License: MIT
 
 ### ZapThreads
@@ -119,8 +115,7 @@ Commenting on generic URLs is also supported, allowing it to become the
 commenting system of any web page. The focus of ZapThreads is to keep the
 component versatile, fast, lightweight, and extremely easy to integrate.
 
-[https://github.com/fr4nzap/zapthreads](https://github.com/fr4nzap/zapthreads)
-
+[fr4nzap/zapthreads](https://github.com/fr4nzap/zapthreads)  
 License: Unlicense
 
 ### NIP-44 Cryptography Audit
@@ -139,9 +134,8 @@ The result of the audit is [available as a
 PDF](https://cure53.de/audit-report_nip44-implementations.pdf) and the issues
 found will be addressed in the coming weeks.
 
-[https://github.com/nostr-protocol/nips/blob/master/44.md](https://github.com/nostr-protocol/nips/blob/master/44.md)
-& [https://github.com/paulmillr/nip44](https://github.com/paulmillr/nip44)
-
+[nostr-protocol/nips/44](https://github.com/nostr-protocol/nips/blob/master/44.md)
+& [paulmillr/nip44](https://github.com/paulmillr/nip44)  
 License: Public Domain
 
 ### NIP-90 Data Vending Machine Framework
@@ -159,8 +153,7 @@ NIP-90, nostr can act as a marketplace for data processing, where users can
 request jobs to be processed without having to care about "who" processes the
 data.
 
-[https://github.com/believethehype/nostrdvm](https://github.com/believethehype/nostrdvm)
-
+[believethehype/nostrdvm](https://github.com/believethehype/nostrdvm)  
 License: MIT
 
 We can’t wait to see what 2024 has in store for the nostrverse, and we’re proud
