--- a/data/blog/nostr-grants-december-2023.mdx
+++ b/data/blog/nostr-grants-december-2023.mdx
@@ -55,7 +55,7 @@ extendable and customizable, allowing users to easily install extensions and use
 various themes. Its multi-column TweetDeck-style interface is a great way to
 stay on top of multiple feeds and topics at once.
 
-[luminous-devs/lume](https://github.com/luminous-devs/lume)  
+Repository: [luminous-devs/lume](https://github.com/luminous-devs/lume)  
 License: GPL-3.0
 
 ### Flockstr
@@ -68,7 +68,7 @@ so users foreign to nostr may be entirely unaware that they are using a
 decentralized ecosystem aside from when signing in or seamlessly paying for paid
 events via lightning.
 
-[zmeyer44/flockstr](https://github.com/zmeyer44/flockstr)  
+Repository: [zmeyer44/flockstr](https://github.com/zmeyer44/flockstr)  
 License: MIT
 
 ### Camelus
@@ -85,7 +85,7 @@ built upon [NDK](https://github.com/nostr-dev-kit/) and the
 [NIP-65](https://github.com/nostr-protocol/nips/blob/master/65.md) gossip model,
 allowing the client to focus on higher-level functionality and features.
 
-[leo-lox/camelus](https://github.com/leo-lox/camelus)  
+Repository: [leo-lox/camelus](https://github.com/leo-lox/camelus)  
 License: GPL-3.0
 
 ### noStrudel
@@ -101,7 +101,7 @@ communities with a Reddit-style interface for
 content. Alongside regular note, messaging, and profile functionality, noStrudel
 also features streams, channels, lists, badges, and more.
 
-[hzrd149/nostrudel](https://github.com/hzrd149/nostrudel)  
+Repository: [hzrd149/nostrudel](https://github.com/hzrd149/nostrudel)  
 License: MIT
 
 ### ZapThreads
@@ -115,7 +115,7 @@ Commenting on generic URLs is also supported, allowing it to become the
 commenting system of any web page. The focus of ZapThreads is to keep the
 component versatile, fast, lightweight, and extremely easy to integrate.
 
-[fr4nzap/zapthreads](https://github.com/fr4nzap/zapthreads)  
+Repository: [fr4nzap/zapthreads](https://github.com/fr4nzap/zapthreads)  
 License: Unlicense
 
 ### NIP-44 Cryptography Audit
@@ -134,7 +134,7 @@ The result of the audit is [available as a
 PDF](https://cure53.de/audit-report_nip44-implementations.pdf) and the issues
 found will be addressed in the coming weeks.
 
-[nostr-protocol/nips/44](https://github.com/nostr-protocol/nips/blob/master/44.md)
+Repository: [nostr-protocol/nips/44](https://github.com/nostr-protocol/nips/blob/master/44.md)
 & [paulmillr/nip44](https://github.com/paulmillr/nip44)  
 License: Public Domain
 
@@ -153,7 +153,7 @@ NIP-90, nostr can act as a marketplace for data processing, where users can
 request jobs to be processed without having to care about "who" processes the
 data.
 
-[believethehype/nostrdvm](https://github.com/believethehype/nostrdvm)  
+Repository: [believethehype/nostrdvm](https://github.com/believethehype/nostrdvm)  
 License: MIT
 
 We can’t wait to see what 2024 has in store for the nostrverse, and we’re proud
