feat(blog): re-word

--- a/data/blog/nostr-grants-december-2023.mdx
+++ b/data/blog/nostr-grants-december-2023.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'nostr']
 draft: false
 authors: ['nvk', 'dergigi']
 images: ['/static/images/blog/19-nostr-dec.jpg']
-summary: "OpenSats is funding another dozen open-source projects in the nostr ecosystem."
+summary: "OpenSats is funding seven more open-source projects in the nostr ecosystem."
 ---
 
 It’s been a year of notes, a year of zaps, a year of purple-feathered early
@@ -45,7 +45,7 @@ donation to the fund:
     <DonateToNostrFundButton/>
 </center>
 
-As always, let's spend some time to look at these projects in more detail:
+As always, let's look at each project in more detail:
 
 ### Lume
 
