fix: sentence fragment

--- a/data/blog/nostr-grants-december-2023.mdx
+++ b/data/blog/nostr-grants-december-2023.mdx
@@ -9,8 +9,8 @@ summary: "OpenSats is funding seven more open-source projects in the nostr ecosy
 ---
 
 It’s been a year of notes, a year of zaps, a year of purple-feathered early
-adopters telling each other “good morning” and “good night.” A year of
-experimentation, a year of relaying, a year of building other stuff.
+adopters telling each other “good morning” and “good night”; a year of
+experimentation, a year of relaying, and a year of building other stuff.
 
 While still in its infancy, nostr is slowly but surely establishing itself as
 something that stands out from the flock of decentralized social media
