fix: Nostr -> nostr

--- a/data/blog/nostr-grants-december-2023.mdx
+++ b/data/blog/nostr-grants-december-2023.mdx
@@ -62,7 +62,7 @@ License: GPL-3.0
 
 ### Flockstr
 
-[Flockstr](https://www.flockstr.com/) is a calendar events app on Nostr. Users
+[Flockstr](https://www.flockstr.com/) is a calendar events app on nostr. Users
 are able to create events, post updates, invite other users, issue tickets,
 collect payments, and pretty much everything that is commonplace on centralized
 platforms like Eventbrite and Meetups.com. The goal is to provide a seamless UI
