--- a/data/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin.mdx
+++ b/data/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin.mdx
@@ -25,13 +25,13 @@ projects like [Fedimint](https://github.com/fedimint/fedimint),
 
 Tobin's overarching goal is to get
 [rust-bitcoin](https://github.com/rust-bitcoin/rust-bitcoin) to a version 1.0.0 release,
-along with the underlying components such as
+along with underlying components such as
 [rust-secp256k1](https://github.com/rust-bitcoin/rust-secp256k1),
 [rust-bech32](https://github.com/rust-bitcoin/rust-bech32),
 [bitcoin_hashes](https://github.com/rust-bitcoin/bitcoin_hashes), and others.
 He is also focused on the effort of reviewing every public type and function, a
 meticulous process that often involves extensive discussions. This effort promises
-a stable API with minimal changes that you guys can rely on.
+a stable API with minimal changes that developers can rely on.
 
 On top of that, he’ll persist in iterating on the API to maintain its alignment
 with [Rust API design principles](https://github.com/rust-lang/api-guidelines),
