Small link adjustments

--- a/data/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin.mdx
+++ b/data/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin.mdx
@@ -44,11 +44,13 @@ All of Tobin’s work lines up perfectly with the goal of the LTS program:
 building a stronger, more resilient Bitcoin network by fostering long-term
 stability for open-source developers.
 
-If you’re a fellow load-bearing internet person, OpenSats invites you to explore
-the opportunities within our [long-term support program](/tags/lts). If you
-would like to support Tobin’s and other’s work, please consider donating to the
-[General Fund](/projects/general_fund):
+If you’re a fellow [load-bearing internet person][lbip], OpenSats invites you to
+explore the opportunities within our [LTS](/tags/lts) program. If you would like
+to support Tobin’s and other’s work, please consider donating to the General
+Fund:
 
 <center>
     <DonateToGeneralFundButton/>
 </center>
+
+[lbip]: /blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors
