--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -14,3 +14,5 @@ summary: "TODO"
 ![](/static/images/blog/2023-eoy/allocation.png)
 
 ![](/static/images/blog/2023-eoy/lts-grantees.png)
+
+![](/static/images/blog/2023-eoy/grantees.png)
