fix: escape $ sign

--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -90,13 +90,13 @@ in 2023 were made via Lightning.
 ![](/static/images/blog/2023-eo/donations.png)
 
 As mentioned above, out of the hundreds of donations received this year, one
-stood out in particular: the [$10M donation from
+stood out in particular: the [\$10M donation from
 #startsmall](https://opensats.org/blog/opensats-receives-additional-funding-of-dollar10m-from-startsmall),
 which kickstarted [The Nostr Fund](https://opensats.org/projects/nostr) with
-$5M, filled up our [General Fund](https://opensats.org/projects/general_fund)
-with $4.7M, and provided funding for our [Operations
-Budget](https://opensats.org/projects/opensats_operations_budget) with $330k.
-The remaining donations in 2023 amounted to over 660 million sats or $230,000 at
+\$5M, filled up our [General Fund](https://opensats.org/projects/general_fund)
+with \$4.7M, and provided funding for our [Operations
+Budget](https://opensats.org/projects/opensats_operations_budget) with \$330k.
+The remaining donations in 2023 amounted to over 660 million sats or \$230,000 at
 the time of donation. The vast majority of donations were made towards our
 General Fund.
 
@@ -110,9 +110,9 @@ bitcoin-related, while The Nostr Fund is geared towards—surprise, surprise—n
 projects. As nostr is still developing, we tried to support a broad array of
 projects and initiatives, including experimental and exploratory work.
 
-Our General Fund is almost fully allocated as of this writing, with ~$4.8M
-donations received in 2023 and ~$4.3M allocated. The Nostr Fund is on track to
-be fully allocated by the end of Q1 2024, with ~$3.4M out of $5M going towards a
+Our General Fund is almost fully allocated as of this writing, with ~\$4.8M
+donations received in 2023 and ~\$4.3M allocated. The Nostr Fund is on track to
+be fully allocated by the end of Q1 2024, with ~\$3.4M out of \$5M going towards a
 variety of free and open-source projects in the nostr ecosystem as of this
 writing.
 
@@ -307,7 +307,7 @@ selection](https://opensats.org/selection) and fund distribution.
 ![](/static/images/blog/2023-eoy/grantees.png)
 
 Most of our grants are being paid out monthly. In sum we've sent more than seven
-billion sats to our grantees, in addition to a $1M grant given to
+billion sats to our grantees, in addition to a \$1M grant given to
 [GrapheneOS](https://opensats.org/projects/grapheneos) at the beginning of the
 year. We will continue to support bitcoin-adjacent projects like Graphene and
 [The Tor Project](https://opensats.org/projects/tor), as many people have to
