feat: announcement section, add TODO

--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -13,6 +13,10 @@ pause and reflect upon what 2023 meant for OpenSats, what we were able to do to
 pursue [our mission](https://opensats.org/mission), and paint a picture of what
 we have planned for 2024.
 
+TODO: Better intro.
+
+## Announcements
+
 In May this year, in addition to the many donations of our amazing supporters
 all over the world, we received a large amount of [funding from
 #startsmall](https://opensats.org/blog/opensats-receives-additional-funding-of-dollar10m-from-startsmall),
