feat: add nostr distribution chart

--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -286,7 +286,7 @@ As you can see in the chart below, most of our nostr-related grants went towards
 client development, which is an area that needed a lot of support in the early
 stages of this novel protocol.
 
-![](https://lh7-us.googleusercontent.com/jk3q4uvF6pQEjy4CA7s7iUHYZzc7yrxijuxvow1t01Uyb_C-Lpx6kp4-AGU8CzlVje9RVf4rOCwOAwK87KxP8oMgwO0B2QS2qiSFGDxKIxnLglX5YAovCYx-a2INkFZ9IyuT2QKW49nmHdIzCckmGx4)
+![](/static/images/blog/2023-eoy/nostr-distribution.png)
 
 We are excited to see nostr grow and, slowly but surely, mature. It is
 undoubtedly still early days, so we expect a shift from clients to “other stuff”
