--- a/data/projects/nostr.mdx
+++ b/data/projects/nostr.mdx
@@ -13,7 +13,7 @@ tags: ['OpenSats', 'Fund']
 bonusUSD: 5000000
 ---
 
-The Nostr General Fund is a way for you to support the development and
+The Nostr Fund is a way for you to support the development and
 improvement of the Nostr protocol and related software. The fund is made up of
 donations from individuals and organizations.
 
