feat: link to /donate

--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -73,9 +73,9 @@ In December we also announced our third wave of grants for
 bringing our total number of grants announced this year to 76.
 
 None of these things would’ve been possible without the generous support of our
-donors. If you’d like to support our work, please consider making a donation.
+donors. If you’d like to support our work, please consider [making a donation](/donate).
 
-[TODO: Insert button]
+---
 
 With a general overview of our activities in 2023 in place, let’s “run the
 numbers” by providing a breakdown of donations, our current allocation of
