feat: add donate to nostr button

--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -294,7 +294,12 @@ in the coming years. However, it is fantastic to see a censorship-resistant and
 sat-infused social media protocol taking off, and we are incredibly optimistic
 about its future. If you are working on a nostr-related open-source project,
 don’t hesitate to [apply for funding](/apply/grant) so you
-might join our growing list of grantees.
+might join our growing list of grantees. If you want to support the nostr
+ecosystem, consider making a donation to The Nostr Fund:
+
+<center>
+    <DonateToNostrFundButton/>
+</center>
 
 ## OpenSats Grantees
 
