feat: add general fund button, dividers, & fix headline

--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -104,6 +104,12 @@ The remaining donations in 2023 amounted to over 660 million sats or \$230,000 a
 the time of donation. The vast majority of donations were made towards our
 General Fund.
 
+<center>
+    <DonateToGeneralFundButton/>
+</center>
+
+---
+
 ## Allocation
 
 We have two funds that are dedicated 100% to funding free and open-source
@@ -301,7 +307,9 @@ ecosystem, consider making a donation to The Nostr Fund:
     <DonateToNostrFundButton/>
 </center>
 
-## OpenSats Grantees
+---
+
+## Grantees
 
 After the initial wave of grants announced in July, we’ve added around 10
 grantees each month on average, totalling 90 approved grants as of this writing
