--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -13,7 +13,7 @@ pause and reflect upon what 2023 meant for OpenSats, what we were able to do to
 pursue [our mission](/mission), and paint a picture of what
 we have planned for 2024.
 
-TODO: Better intro.
+TODO: Better and more optimistic intro.
 
 ## Announcements
 
