feat: better intro

--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -8,12 +8,49 @@ images: ['/static/images/blog/20-eoy.jpg']
 summary: "TODO"
 ---
 
-The year is coming to an end, and what a year it's been! Let’s take some time to
-pause and reflect upon what 2023 meant for OpenSats, what we were able to do to
-pursue [our mission](/mission), and paint a picture of what
-we have planned for 2024.
+The year is coming to an end, and what a year it's been! Amidst all the turmoil
+that 2023 brought, the Bitcoin network tirelessly marched on, bringing hope and
+optimism to millions. Block by block it continues to lay the foundation for a
+better and brighter future, not only economically, but spiritually and
+philosophically too. If something like Bitcoin can be created and manages to
+survive, what other bastions of freedom will we be able to create? What kind of
+freedom tech could we come up with in the years to come if we dedicate our time
+and resources to it? What foundational technologies can we create today that
+will enrich the lives of future generations?
 
-TODO: Better and more optimistic intro.
+The emergence of nostr shows that financial freedom is far from the only thing
+people care about. Freedom of expression, freedom of speech, and freedom of
+association are rights that many of us take for granted. Unfortunately, they
+aren't the default in cyberspace. But they can be. If we set our mind to it, and
+if we build the threads that make up the fabric of society with care and
+foresight.
+
+> We can rebuild it. We have the technology.
+>
+> <cite>—Richard Anderson on closed and permissioned systems</cite>
+
+We at OpenSats believe that open systems are essential to the future of the
+internet and the world. They allow people to collaborate and share knowledge,
+without being locked into proprietary software or hardware. They allow people to
+vote with their digital feet, providing meaningful alternatives to permissioned
+systems.
+
+We care about free and open-source software because we believe that an [open
+society in the electronic
+age](https://nakamotoinstitute.org/cypherpunk-manifesto/#selection-3.0-3.63) is
+not only possible but paramount. For a truly free society, openness is not a
+luxury, but a necessity.
+
+> Being open source means anyone can independently review the code. If it was
+> closed source, nobody could verify the security. I think it's essential for a
+> program of this nature to be open source.
+>
+> <cite>—Satoshi Nakamoto on Bitcoin</cite>
+
+In the spirit of openness, let's take some time to pause and reflect upon the
+announcements we made this year, what we did to pursue [our mission](/mission),
+and what kinds of projects we were able to support thanks to the generous
+donations made by all of you.
 
 ## Announcements
 
